--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -24,9 +24,9 @@ h4 {
 }
 
 .leaflet-container {
-  height: 94vh;
-  width: 100%;
-  z-index: 1;
+  /* height: 100%; */
+  /* width: 100%; */
+  /* z-index: 1; */
 }
 .infoPanel {
   position: absolute;
